samples/_failures_safe/1761647860_2ae4ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3cd0d2e.c: In function ‘main’:
./samples/SAFE/__tmp_f3cd0d2e.c:151:20: error: missing terminating " character
  151 |             printf("Goodbye!\
      |                    ^~~~~~~~~~
./samples/SAFE/__tmp_f3cd0d2e.c:151:13: error: expected expression at end of input
  151 |             printf("Goodbye!\
      |             ^~~~~~
./samples/SAFE/__tmp_f3cd0d2e.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f3cd0d2e.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f3cd0d2e.c:151:13: error: expected declaration or statement at end of input
